--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.profiles.active=dev
+db.driverclassname=com.microsoft.sqlserver.jdbc.SQLServerDriver
+db.url=jdbc:sqlserver://localhost:1433;databaseName=mydb
+db.username=dbuser
+db.password=ENC(GSiFwDuXRzjlmMdj/G5a8g==)
+jasypt.encryptor.bean=encryptorBean
 server.port=8088
