--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <version>6.1.0.jre8</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.8.8</version>
+        </dependency>
 
     </dependencies>
 
