Added Test File

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=dev
-db.driverclassname=com.microsoft.sqlserver.jdbc.SQLServerDriver
-db.url=jdbc:sqlserver://localhost:1433;databaseName=mydb
-db.username=dbuser
-db.password=ENC(GSiFwDuXRzjlmMdj/G5a8g==)
-jasypt.encryptor.bean=encryptorBean
+#db.driverclassname=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#db.url=jdbc:sqlserver://localhost:1433;databaseName=mydb
+#db.username=dbuser
+#db.password=ENC(GSiFwDuXRzjlmMdj/G5a8g==)
 server.port=8088
+#spring.jpa.hibernate.dialect=org.hibernatejasyptdemoApplication.dialect.SQLServer2012Dialect
